Fix: Solution complète pour page blanche - ajout ErrorBoundary, fallbacks et correction framer-motion

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Rodrigue GBADOU - Développeur Web Full-Stack</title>
+    <meta name="description" content="Portfolio de Rodrigue GBADOU, Développeur Web Full-Stack spécialisé en React, Node.js et PHP." />
+    <meta name="theme-color" content="#2563eb" />
+    <script src="/_init.js"></script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <noscript>
+      <div style="padding: 20px; text-align: center;">
+        <h1>JavaScript est désactivé</h1>
+        <p>Ce site nécessite JavaScript pour fonctionner correctement. Veuillez l'activer dans les paramètres de votre navigateur.</p>
+      </div>
+    </noscript>
   </body>
 </html>
